Allow passing arguments to MavenExecutor